Update start option
The start option can now ensure that an application is started :

{Application, Type, application} | {Application, application}, where
Application = atom() and Type = permanent | transient | temporary

--- a/config/wok.config
+++ b/config/wok.config
@@ -25,6 +25,8 @@
     ]}
   , {start, [
       {dummy_producer_handler, [], worker}
+      % {dummy_supervisor, [], supervisor}
+      % {dummy_app, permanent, application}
     ]}
   , {initializer, [
       {dummy_initializer, [dummy_initializer, state]}
