--- a/rebar.config
+++ b/rebar.config
@@ -40,9 +40,10 @@
  ]}.
 
 
-{eunit_opts, [
-              verbose, {report, {eunit_surefire, [{dir, "test/eunit"}]}}
-             ]}.
+{eunit_opts, [no_tty, {report, {unite_compact, [profile]}}]}.
+% {eunit_opts, [
+%               verbose, {report, {eunit_surefire, [{dir, "test/eunit"}]}}
+%              ]}.
 {cover_enabled, true}.
 
 {pre_hooks, [{eunit, "mkdir -p test/eunit"}]}.
@@ -50,7 +51,8 @@
 {profiles, [
             {test, [
                     {deps, [
-                            meck
+                            meck,
+                            {unite, "", {git, "git://github.com/basho/unite.git"}}
                            ]}
                    ]},
             {dev_metrics, [
