--- a/rebar.config
+++ b/rebar.config
@@ -2,8 +2,8 @@
 {shell, [{config, "config/wok.config"}]}.
 
 {plugins, [
-           rebar3_elixir,
-           {rebar3_lint, {git, "https://github.com/project-fifo/rebar3_lint.git", {tag, "0.1.6"}}}
+           {rebar3_elixir, "~> 0.0.9"},
+           rebar3_lint
           ]}.
 {elixir_version, "~> 1.2"}.
 {elixir_bindings, [{wok, [{except, [state]}]},
@@ -31,12 +31,12 @@
   {lager, "~> 3.2.0"},
   {lager_json_formatter, "~> 0.1.1"},
   % {kafe, "~> 1.6.2"},
-  {kafe, {git, "https://github.com/botsunit/kafe.git", {branch, "2.0.0"}}},
-  {bucs, "~> 0.1.9"},
-  {doteki, "~> 0.1.13"},
+  {kafe, {git, "https://github.com/botsunit/kafe.git", {branch, "master"}}},
+  {bucs, "~> 1.0.0"},
+  {doteki, "~> 1.0.0"},
   {uuid, {git, "https://github.com/botsunit/erlang-uuid.git", {tag, "0.6.0"}}},
   % {metrics, "~> 2.1.0"}
-  {metrics, {git, "https://github.com/botsunit/erlang-metrics.git", {branch, "add_delete"}}}
+  {metrics, {git, "https://github.com/botsunit/erlang-metrics.git", {tag, "2.2.0"}}}
  ]}.
 
 
