--- a/rebar.config
+++ b/rebar.config
@@ -30,13 +30,11 @@
 {deps, [
   {lager, "~> 3.2.0"},
   {lager_json_formatter, "~> 0.1.1"},
-  % {kafe, "~> 1.6.2"},
-  {kafe, {git, "https://github.com/botsunit/kafe.git", {branch, "master"}}},
+  {kafe, "~> 2.0.0"},
   {bucs, "~> 1.0.0"},
   {doteki, "~> 1.0.0"},
   {uuid, {git, "https://github.com/botsunit/erlang-uuid.git", {tag, "0.6.0"}}},
-  % {metrics, "~> 2.1.0"}
-  {metrics, {git, "https://github.com/botsunit/erlang-metrics.git", {tag, "2.2.0"}}}
+  {metrics, "~> 2.2.0"}
  ]}.
 
 
