--- a/rebar.config
+++ b/rebar.config
@@ -2,7 +2,7 @@
 {shell, [{config, "config/wok.config"}]}.
 
 {plugins, [
-           {rebar3_elixir, "~> 0.0.9"},
+           {rebar3_elixir, "~> 0.1.0"},
            rebar3_lint
           ]}.
 {elixir_version, "~> 1.2"}.
@@ -29,12 +29,11 @@
 
 {deps, [
   {lager, "~> 3.2.0"},
-  {lager_json_formatter, "~> 0.1.1"},
-  % {kafe, "~> 2.0.0"},
-  {kafe, {git, "https://github.com/botsunit/kafe.git", {branch, "master"}}},
-  {bucs, "~> 1.0.1"},
-  {doteki, "~> 1.0.1"},
-  {uuid, {git, "https://github.com/botsunit/erlang-uuid.git", {tag, "0.6.0"}}},
+  {lager_json_formatter, "~> 0.2.0"},
+  {kafe, "~> 2.1.0"},
+  {bucs, "~> 1.0.2"},
+  {doteki, "~> 1.0.2"},
+  {uuid, {git, "https://github.com/botsunit/erlang-uuid.git", {tag, "0.7.0"}}},
   {metrics, "~> 2.2.0"}
  ]}.
 
