--- a/config/wok.config
+++ b/config/wok.config
@@ -12,7 +12,7 @@
       % {consumer_group, {random, [{prefix, hello}]}},
       {topics, [
         % {topic name, options}
-        {<<"test">>, [{max_bytes, 10485760}, {from_beginning, true}]},
+        {<<"test">>, [{max_bytes, 10485760}, {from_beginning, true}, {errors_actions, #{fetch => #{'*' => error, offset_out_of_range => {reset, earliest}}}}]},
         {<<"repl">>, [{fetch_frequency, 8000}, {max_bytes, 10485760}]},
         {<<"public">>, [{fetch_frequency, 5000}, {max_bytes, 10485760}]},
         {<<"service">>, [{fetch_frequency, 10000}, {max_bytes, 10485760}]}
