--- a/rebar.config
+++ b/rebar.config
@@ -30,8 +30,7 @@
 {deps, [
   {lager, "~> 3.2.0"},
   {lager_json_formatter, "~> 0.2.1"},
-  %{kafe, "~> 2.1.6"},
-  {kafe, {git, "https://github.com/botsunit/kafe.git", {branch, "all_in_one"}}},
+  {kafe, "~> 2.2.0"},
   {bucs, "~> 1.0.4"},
   {doteki, "~> 1.0.3"},
   {uuid, {git, "https://github.com/botsunit/erlang-uuid.git", {tag, "0.7.1"}}},
